# tsumugi

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml
.github/workflows/: gitleaks.yml  release.yml  test.yml
docs/: filter-dsl-design.md  misskey-client-prompts.md  misskey-multicolumn-client-design.md  phase0-scaffold.md
docs/superpowers/plans/: 2026-07-19-background-position.md  2026-07-19-drive-picker.md  2026-07-20-upload-on-submit.md  2026-07-21-clip-favorite.md  2026-07-21-external-link-icon.md  2026-07-22-miauth-reauth-ui.md  2026-07-23-pane-resize-slice2.md  2026-07-23-pane-split-slice1.md
docs/superpowers/specs/: 2026-07-19-background-position-design.md  2026-07-19-drive-picker-design.md  2026-07-20-upload-on-submit-design.md  2026-07-21-clip-favorite-design.md  2026-07-21-external-link-icon-design.md  2026-07-22-miauth-reauth-ui-design.md  2026-07-22-pane-split-design.md
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
frontend/scripts/: copy-emoji-assets.mjs
frontend/src/: App.svelte  app.css  main.ts
frontend/src/bindings/: tauri.gen.ts
frontend/src/input/: ReactionPicker.svelte
frontend/src/lib/: backgroundFitMode.ts  backgroundPosition.ts  emoji.ts  emojiKey.ts  ipc.ts  keymap.ts  mfm.ts  nyaize.ts  platform.ts  store.svelte.ts  theme.ts  time.ts  unicodeEmojiList.ts
frontend/src/render/: CustomEmoji.svelte  MediaGrid.svelte  Mfm.svelte  MfmNode.svelte  Sparkle.svelte  UnicodeEmoji.svelte
frontend/src/ui/: AccountSelect.svelte  AddAccount.svelte  AddColumnModal.svelte  Backstage.svelte  Column.svelte  ColumnSettings.svelte  Compose.svelte  ComposeBar.svelte  ConfirmDialog.svelte  DrivePicker.svelte  Dropdown.svelte  MuteSettings.svelte  NoteCard.svelte  NoteMenu.svelte  NotificationCard.svelte  NotifySettings.svelte  Pane.svelte  Settings.svelte  VisibilitySelect.svelte
frontend/src/ui/settings/: AboutSection.svelte  AccountsSection.svelte  DataSection.svelte  DisplaySection.svelte  KeysSection.svelte  MuteSection.svelte  NotifySection.svelte  ReactionSection.svelte
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/openapi/: VERSION.txt  misskey-api-doc.json
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: client.rs  clips.rs  drive.rs  meta.rs  mod.rs  mutes.rs  normalize.rs  notes.rs  notifications.rs
src-tauri/src/commands/: account.rs  app.rs  clip.rs  column.rs  mod.rs  mute.rs  note.rs
src-tauri/src/domain/: account.rs  clip.rs  column.rs  list.rs  mod.rs  mute.rs  note.rs  notification.rs  notify.rs  pane.rs  reaction.rs  ui.rs  user.rs
src-tauri/src/filter/: ast.rs  eval.rs  mod.rs  mute.rs  parser.rs  sql.rs  token.rs
src-tauri/src/session/: account_manager.rs  miauth.rs  mod.rs  secrets.rs
src-tauri/src/store/: db.rs  mod.rs  note_cache.rs  settings.rs
src-tauri/src/stream/: connection.rs  inbox.rs  mod.rs  protocol.rs
