[package]
name = "tsumugi"
version = "0.1.0"
description = "Misskey multi-column desktop client"
authors = ["onodai"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsumugi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["specta"] }
tauri-plugin-log = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
url = "2.5.8"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Rust -> TS type & command generation (pinned rc; see docs/phase0-scaffold.md)
specta = { version = "=2.0.0-rc.25", features = ["derive", "uuid", "url"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
