[package]
name = "tsumugi"
version = "0.4.0"
description = "Misskey multi-column desktop client"
authors = ["onodai145"]
license = "MIT"
repository = "https://github.com/onodai145/tsumugi"
edition = "2021"
# keyring-core系ストア(windows-native-keyring-store / android-native-keyring-store)が
# rust-version 1.88 を要求するため引き上げ。
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsumugi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# フロントエンド一式をバイナリに埋め込みビルドさせる標準機能。cargo tauri dev/build は
# 内部でこのフラグを付け外ししてくれるが、素の `cargo build --release` でも本番動作に
# なるようデフォルトで有効化しておく(無いと devUrl に接続しにいき「接続が拒否されました」になる)。
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["specta"] }
tauri-plugin-log = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
url = "2.5.8"
# OS標準シークレットストアへのトークン保存。プラットフォームごとに実装が分かれているため
# keyring(v1互換ラッパ)は使わず keyring-core + 各プラットフォームの store crate を直接使う
# (v1ラッパは Android 未対応のため。see session/secrets.rs)。
keyring-core = "1.0.0"

# Rust -> TS type & command generation (pinned rc; see docs/phase0-scaffold.md)
specta = { version = "=2.0.0-rc.25", features = ["derive", "uuid", "url"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
chrono = { version = "0.4.45", default-features = false, features = ["std", "alloc"] }
tauri-plugin-opener = "2.5.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tauri-plugin-dialog = "2.7.1"
regex = "1.12.4"
tauri-plugin-notification = "2"
base64 = "0.22.1"
tauri-plugin-os = "2"
# Android の SAF (content:// URI) で選ばれたファイルを読むために使う。
# デスクトップでは std::fs 相当のまま(read_image_data_url 側で target_os 分岐)。
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# 多重起動防止(Issue #53)。ノートキャッシュを SQLite に保存しており、複数プロセスが
# 同時に書き込むと SQLITE_BUSY 等の競合を起こしうるため。モバイルには存在しないプラグイン。
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# "keychain"(コード署名なしのCLI/デスクトップアプリ向け)を選択。
# "protected"はprovisioning profileでコード署名されたアプリ向け(iCloud同期/生体認証対応)で、
# このアプリの配布形態(未署名の cargo tauri build)には合わない。
apple-native-keyring-store = { version = "1.0.1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios", target_os = "android"))))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
# wry が内部で無効化している IME preedit(未確定文字列インライン表示)を明示的に
# 再度有効化するために使う(lib.rs 参照)。wry-0.55.1 が依存する webkit2gtk と同じ
# バージョンに固定する。
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
